# tgpt

./: Dockerfile  README.md  compose.yml  pyproject.toml  requirements.txt
src/: bot.py  chatgpt.py  ctl.py  db_handler.py  limiter.py
